Add playGame function to run the game
Add instructions to index.html also.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
   <body>
     <h1>Rock Paper Scissors</h1>
-    <p>Play in the console.</p>
+    <p>Play in the console - run the function "playGame()".</p>
   </body>
 </html>
