Add Images, Give Credit in README

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 
   <body>
     <h1>Rock Paper Scissors</h1>
-    <p>Play in the console - run the function "playGame()".</p>
+    <br>
+    <div class="image-container">
+      <div class="rock">
+        <img src="./images/rock.jpg" alt="rock">
+        <button>Rock</button>
+      </div>
+      <div class="paper">
+        <img src="./images/paper.jpg" alt="paper">
+        <button>Paper</button>
+      </div>
+      <div class="scissors">
+        <img src="./images/scissors.png" alt="scissors">
+        <button>Scissors</button>
+      </div>
   </body>
 </html>
