--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -12,7 +13,7 @@
     <div class="image-container">
       <div class="rock">
         <img src="./images/rock.jpg" alt="rock">
-        <button>Rock</button>
+        <button>Rocks</button>
       </div>
       <div class="paper">
         <img src="./images/paper.jpg" alt="paper">
