Change scissors to jpg file
Change battle area to results div.

--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
   </head>
 
   <body>
-    <h1>Rock Paper Scissors</h1>
-    <br>
+    <div class="header">
+      <h1>Rock Paper Scissors</h1>
+      <p>Pick One</p>
+    </div>
     <div id="image-container">
       <div class="rock">
         <img src="./images/rock.jpg" alt="rock">
-        <a href="#battle-area"><button>Rocks</button></a>
+        <button>Rocks</button>
       </div>
       <div class="paper">
         <img src="./images/paper.jpg" alt="paper">
-        <a href="#battle-area"><button>Paper</button></a>
+        <button>Paper</button>
       </div>
       <div class="scissors">
-        <img src="./images/scissors.png" alt="scissors">
-        <a href="#battle-area"><button>Scissors</button></a>
+        <img src="./images/scissors.jpg" alt="scissors">
+        <button>Scissors</button>
       </div>
     </div>
     
-    <div id="battle-area">
+    <div id="results">
+      <h2>Results</h2>
 
     </div>
     
