Add structure for results

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>Rock Paper Scissors</h1>
       <p>Pick One</p>
     </div>
+
     <div id="image-container">
       <div class="rock">
         <img src="./images/rock.jpg" alt="rock">
@@ -29,8 +30,21 @@
     
     <div id="results">
       <h2>Results</h2>
-
+      <div class="flex-container">
+        <div class="human-score">
+          <div class="label"></div>
+          <div class="score"></div>
+        </div>
+        <div class="round">
+          <img class="human-image" src="">
+          <div class="message"></div>
+          <img class="computer-image" src="">
+        </div>
+        <div class="computer-score">
+          <div class="label"></div>
+          <div class="score"></div>
+        </div>
+      </div>
     </div>
-    
   </body>
 </html>
