Add style to results
Add image for question mark and given credit in README.

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
       <h2>Results</h2>
       <div class="flex-container">
         <div class="human-score">
-          <div class="label"></div>
-          <div class="score"></div>
+          <div class="label">Human Score</div>
+          <div class="score">0</div>
         </div>
         <div class="round">
-          <img class="human-image" src="">
-          <div class="message"></div>
-          <img class="computer-image" src="">
+          <img class="human-image" src="./images/question-mark.jpg">
+          <div class="message">Waiting on start</div>
+          <img class="computer-image" src="./images/question-mark.jpg">
         </div>
         <div class="computer-score">
-          <div class="label"></div>
-          <div class="score"></div>
+          <div class="label">Computer Score</div>
+          <div class="score">0</div>
         </div>
       </div>
     </div>
