Make capitalise function
Remove p from header div and add ids for option buttons.

--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
   <body>
     <div class="header">
       <h1>Rock Paper Scissors</h1>
-      <p>Pick One</p>
     </div>
 
     <div id="image-container">
       <div class="rock">
         <img src="./images/rock.jpg" alt="rock">
-        <button>Rocks</button>
+        <button id="rock">Rock</button>
       </div>
       <div class="paper">
         <img src="./images/paper.jpg" alt="paper">
-        <button>Paper</button>
+        <button id="paper">Paper</button>
       </div>
       <div class="scissors">
         <img src="./images/scissors.jpg" alt="scissors">
-        <button>Scissors</button>
+        <button id="scissors">Scissors</button>
       </div>
     </div>
     
