Make objective clear

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="round">
           <img class="human-image" src="./images/question-mark.jpg">
-          <div class="message">Waiting on start</div>
+          <div class="message">First to five wins!</div>
           <img class="computer-image" src="./images/question-mark.jpg">
         </div>
         <div class="computer-score">
